--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -14,10 +14,15 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="DarkBlue">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="10*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-        <ComboBox Grid.Row="0" Grid.Column="1" Name="MethodBox" ItemsSource="{Binding Methods}" HorizontalAlignment="Left" Width="150" VerticalAlignment="Center" SelectionChanged="MethodBox_SelectionChanged" />
+            <TextBox Grid.Row="0" Name="IdSearchertxtbox" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Visibility="Hidden"/>
+            <Button Grid.Row="0" Grid.Column="4" Name="SearchBtn" VerticalAlignment="Center" HorizontalAlignment="Center" Width="30" BorderThickness="0" Content="🔍" FontSize="16" Height="30" Visibility="Hidden" Click="SearchBtn_Click"/>
+            <ComboBox Grid.Row="0" Grid.Column="1" Name="MethodBox" ItemsSource="{Binding Methods}" HorizontalAlignment="Left" Width="150" VerticalAlignment="Center" SelectionChanged="MethodBox_SelectionChanged" />
         <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="Http method" Foreground="White" FontWeight="SemiBold"/>
         </Grid>
         <Grid Name="GridAdd" Grid.Row="1" Visibility="Hidden">
@@ -42,12 +47,11 @@
             <TextBlock Grid.Row="1" Grid.Column="3" Text="Color" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
 
 
-
-            <TextBox Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
-            <TextBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
-            <TextBox Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
-            <TextBox Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" FontSize="18"/>
-            <TextBox Grid.Row="1" Grid.Column="5" VerticalAlignment="Center" FontSize="18"/>
+            <TextBox Name="Maketxtbox" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
+            <TextBox Name="Modeltxtbox" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
+            <TextBox Name="Yearxtbox"  Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" FontSize="18"/>
+            <TextBox Name="VINtxtbox"  Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" FontSize="18"/>
+            <TextBox Name="Colortxtbox" Grid.Row="1" Grid.Column="5" VerticalAlignment="Center" FontSize="18"/>
             
         </Grid>
 
@@ -56,9 +60,8 @@
         </Grid>
 
         <Grid Name="GridGetT" Grid.Row="1">
-            <ListView Name="ListCars" ItemsSource="{Binding Cars}">
+            <ListView Name="ListCars" ItemsSource="{Binding Cars}" MouseDoubleClick="ListCars_MouseDoubleClick">
                 <ListView.View>
-                    
                     <GridView>
                         <GridView.ColumnHeaderContainerStyle>
                             <Style>
@@ -78,16 +81,6 @@
                         <Setter Property="FontSize" Value="16"/>
                     </Style>
                 </ListView.ItemContainerStyle>
-                <ListView.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem Header="Id"/>
-                        <MenuItem Header="Make"/>
-                        <MenuItem Header="Model"/>
-                        <MenuItem Header="Year"/>
-                        <MenuItem Header="VIN"/>
-                        <MenuItem Header="Color"/>
-                    </ContextMenu>
-                </ListView.ContextMenu>
             </ListView>
         </Grid>
         
