Repair command,doubleclick method

--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -78,6 +78,7 @@
                 </ListView.View>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
+                        <EventSetter Event="PreviewMouseDown" Handler="ListCars_MouseDoubleClick"/>
                         <Setter Property="FontSize" Value="16"/>
                     </Style>
                 </ListView.ItemContainerStyle>
